--- a/LabManager/Views/Shared/_Layout.cshtml
+++ b/LabManager/Views/Shared/_Layout.cshtml
@@ -35,6 +35,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LabThings" asp-action="Index">Inventory</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Chemical" asp-action="Index">Chemical</a>
+                        </li>
                     </ul>
                 </div>
             </div>
