dropdown in 'create labthing' section displays all categories and posts the correct category id to the database which is viewable in details and edit sections but the edit form still needs to be updated and the details view displays the category id, not the name

--- a/LabManager/Views/LabThings/Index.cshtml
+++ b/LabManager/Views/LabThings/Index.cshtml
@@ -42,9 +42,14 @@
             <th>
                 @Html.DisplayNameFor(model => model.EmployeeID)
             </th>
-            <th>
+            @****************************************************************@
+            @*Custom drop down list for categories:*@
+
+            @****************************************************************@
+
+            @*<th>
                 @Html.DisplayNameFor(model => model.CategoryID)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.ManufacturerID)
             </th>
@@ -84,9 +89,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.EmployeeID)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.CategoryID)
-            </td>
+            </td>*@
+            @****************************************************************@
+            @*Custom drop down list for categories:*@
+
+            @****************************************************************@
+
             <td>
                 @Html.DisplayFor(modelItem => item.ManufacturerID)
             </td>
