--- a/LabManager/Views/LabThings/Edit.cshtml
+++ b/LabManager/Views/LabThings/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+
 }
 
 <h1>Edit LabThing</h1>
@@ -64,9 +65,19 @@
                 <span asp-validation-for="EmployeeID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
-                <input asp-for="CategoryID" class="form-control" />
-                <span asp-validation-for="CategoryID" class="text-danger"></span>
+                @*********************************************************************************@
+@*Category Dropdown: *@
+                <div class="form-group">
+                    <label asp-for="CategoryID" class="control-label"></label>
+            <input asp-for="CategoryID" class="form-control" />
+            <span asp-validation-for="CategoryID" class="text-danger"></span>
+                    @*<label asp-for="CategoryID" class="control-label"></label>
+                    <select asp-for="CategoryID" class="form-control" asp-items="(SelectList)@ViewData["CategoryID"]">
+                        <option value="">-- Select Category --</option>
+                    </select>
+                    <span asp-validation-for="CategoryID" class="text-danger" />*@
+                </div>
+                @*********************************************************************************@
             </div>
             <div class="form-group">
                 <label asp-for="ManufacturerID" class="control-label"></label>
