category name displays for given labthing in labthing details view

--- a/LabManager/Views/LabThings/Details.cshtml
+++ b/LabManager/Views/LabThings/Details.cshtml
@@ -71,10 +71,10 @@
             @Html.DisplayFor(model => model.EmployeeID)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryID)
+            @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryID)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ManufacturerID)
