--- a/LabManager/Views/LabThings/Index.cshtml
+++ b/LabManager/Views/LabThings/Index.cshtml
@@ -94,7 +94,7 @@
                 </td>
           
                 <td>
-                    @Html.DisplayFor(modelItem => item.Category)
+                    @Html.DisplayFor(modelItem => item.Category.Name)
                 </td>
 
                 <td>
