--- a/LabManager/Views/LabThings/Details.cshtml
+++ b/LabManager/Views/LabThings/Details.cshtml
@@ -77,10 +77,10 @@
             @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ManufacturerID)
+            @Html.DisplayNameFor(model => model.Manufacturer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ManufacturerID)
+            @Html.DisplayFor(model => model.Manufacturer.Name)
         </dd>
     </dl>
 </div>
