--- a/LabManager/Views/LabThings/Create.cshtml
+++ b/LabManager/Views/LabThings/Create.cshtml
@@ -63,18 +63,22 @@
                 <span asp-validation-for="LabThing.EmployeeID" class="text-danger"></span>
             </div>
 
-        @*********************************************************************************@
+            @*********************************************************************************@
+@*Dropdowns:*@
+
             <div class="form-group">
                 <label asp-for="LabThing.CategoryID" class="control-label"></label>
                 <select asp-for="LabThing.CategoryID" class="form-control" asp-items="@Model.Category"></select>
             </div>
-        @*********************************************************************************@
-
             <div class="form-group">
                 <label asp-for="LabThing.ManufacturerID" class="control-label"></label>
-                <input asp-for="LabThing.ManufacturerID" class="form-control" />
-                <span asp-validation-for="LabThing.ManufacturerID" class="text-danger"></span>
+                <select asp-for="LabThing.ManufacturerID" class="form-control" asp-items="@Model.Manufacturer"></select>
             </div>
+            <div class="form-group">
+                <label asp-for="LabThing.EmployeeID" class="control-label"></label>
+                <select asp-for="LabThing.EmployeeID" class="form-control" asp-items="@Model.Employee"></select>
+            </div>
+            @*********************************************************************************@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
