--- a/LabManager/Views/LabThings/Create.cshtml
+++ b/LabManager/Views/LabThings/Create.cshtml
@@ -57,14 +57,14 @@
                 <input asp-for="LabThing.Note" class="form-control" />
                 <span asp-validation-for="LabThing.Note" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="LabThing.EmployeeID" class="control-label"></label>
-                <input asp-for="LabThing.EmployeeID" class="form-control" />
-                <span asp-validation-for="LabThing.EmployeeID" class="text-danger"></span>
-            </div>
+            @*<div class="form-group">
+                    <label asp-for="LabThing.EmployeeID" class="control-label"></label>
+                    <input asp-for="LabThing.EmployeeID" class="form-control" />
+                    <span asp-validation-for="LabThing.EmployeeID" class="text-danger"></span>
+                </div>*@
 
             @*********************************************************************************@
-@*Dropdowns:*@
+            @*Dropdowns:*@
 
             <div class="form-group">
                 <label asp-for="LabThing.CategoryID" class="control-label"></label>
@@ -74,16 +74,23 @@
                 <label asp-for="LabThing.ManufacturerID" class="control-label"></label>
                 <select asp-for="LabThing.ManufacturerID" class="form-control" asp-items="@Model.Manufacturer"></select>
             </div>
-            <div class="form-group">
-                <label asp-for="LabThing.EmployeeID" class="control-label"></label>
-                <select asp-for="LabThing.EmployeeID" class="form-control" asp-items="@Model.Employee"></select>
-            </div>
-            @*********************************************************************************@
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+
+    <div class="form-group">
+        <label asp-for="LabThing.EmployeeId" class="control-label"></label>
+        <select asp-for="LabThing.EmployeeId" class="form-control" asp-items="@Model.Employee"></select>
     </div>
+    @*********************************************************************************@
+
+    @*<div class="form-group">
+        <label asp-for="LabThing.EmployeeID" class="control-label"></label>
+        <input asp-for="LabThing.EmployeeID" class="form-control" />
+        <span asp-validation-for="LabThing.Employee.FirstName" class="text-danger"></span>
+        </div>*@
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-primary" />
+    </div>
+    </form>
+</div>
 </div>
 
 <div>
