--- a/LabManager/Views/LabThings/Delete.cshtml
+++ b/LabManager/Views/LabThings/Delete.cshtml
@@ -66,10 +66,10 @@
             @Html.DisplayFor(model => model.Note)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EmployeeID)
+            @Html.DisplayNameFor(model => model.EmployeeId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EmployeeID)
+            @Html.DisplayFor(model => model.EmployeeId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CategoryID)
