user's name is viewable in the employee field of labthings list and details views; the employee dropdown has also been created

--- a/LabManager/Views/LabThings/Index.cshtml
+++ b/LabManager/Views/LabThings/Index.cshtml
@@ -42,7 +42,7 @@
                 @Html.DisplayNameFor(model => model.Note)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Employee.FirstName)
+                @Html.DisplayNameFor(model => model.Employee)
             </th>
 
             <th>
