--- a/LabManager/Views/LabThings/Index.cshtml
+++ b/LabManager/Views/LabThings/Index.cshtml
@@ -46,10 +46,10 @@
             </th>
 
             <th>
-                    @Html.DisplayNameFor(LabThing => LabThing.Category)
+                    @Html.DisplayNameFor(model => model.Category)
                 </th>
             <th>
-                @Html.DisplayNameFor(LabThing => LabThing.Manufacturer)
+                @Html.DisplayNameFor(model => model.Manufacturer)
             </th>
             <th></th>
         </tr>
