--- a/LabManager/Views/LabThings/Edit.cshtml
+++ b/LabManager/Views/LabThings/Edit.cshtml
@@ -71,12 +71,12 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Manufacturer" class="control-label"></label>
-                    @*<select asp-for="ManufacturerID" class="form-control" asp-items="ViewBag.Manufacturer.ID"></select>*@
+                    <select asp-for="ManufacturerID" class="form-control" asp-items="ViewBag.ManufacturerID"></select>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Employee" class="control-label"></label>
-                    @*<select asp-for="EmployeeId" class="form-control" asp-items="ViewBag.Employee.Id"></select>*@
+                    <select asp-for="EmployeeId" class="form-control" asp-items="ViewBag.EmployeeId"></select>
                 </div>
                 @*********************************************************************************@
 
@@ -94,102 +94,3 @@
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     }
-
-@***************************************************************************
-*@
-
-@*@model LabManager.Models.ViewModels.LabThingEditViewModel*@
-@*@model LabManager.Models.LabThing*@
-@*@model IEnumerable<LabManager.Models.LabThing>*@
-
-@*@{
-    ViewData["Title"] = "Edit";
-
-}
-
-<h1>Edit LabThing</h1>
-
-<h4>LabThing</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="LabThing.Name" class="control-label"></label>
-                <input asp-for="LabThing.Name" class="form-control" />
-                <span asp-validation-for="LabThing.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.SerialNo" class="control-label"></label>
-                <input asp-for="LabThing.SerialNo" class="form-control" />
-                <span asp-validation-for="LabThing.SerialNo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.ModelNo" class="control-label"></label>
-                <input asp-for="LabThing.ModelNo" class="form-control" />
-                <span asp-validation-for="LabThing.ModelNo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.AcquisitionDate" class="control-label"></label>
-                <input asp-for="LabThing.AcquisitionDate" class="form-control" />
-                <span asp-validation-for="LabThing.AcquisitionDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.CalibratedOn" class="control-label"></label>
-                <input asp-for="LabThing.CalibratedOn" class="form-control" />
-                <span asp-validation-for="LabThing.CalibratedOn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.CalibrationDue" class="control-label"></label>
-                <input asp-for="LabThing.CalibrationDue" class="form-control" />
-                <span asp-validation-for="LabThing.CalibrationDue" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.MaintenanceOn" class="control-label"></label>
-                <input asp-for="LabThing.MaintenanceOn" class="form-control" />
-                <span asp-validation-for="LabThing.MaintenanceOn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.MaintenanceDue" class="control-label"></label>
-                <input asp-for="LabThing.MaintenanceDue" class="form-control" />
-                <span asp-validation-for="LabThing.MaintenanceDue" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.Note" class="control-label"></label>
-                <input asp-for="LabThing.Note" class="form-control" />
-                <span asp-validation-for="LabThing.Note" class="text-danger"></span>
-            </div>*@
-
-            @*********************************************************************************@
-            @*Dropdowns:*@
-
-            @*<div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
-                <select asp-for="CategoryID" class="form-control" asp-items="@Model.Category"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="LabThing.ManufacturerID" class="control-label"></label>
-                <select asp-for="LabThing.ManufacturerID" class="form-control" asp-items="@Model.Manufacturer"></select>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="LabThing.EmployeeId" class="control-label"></label>
-                <select asp-for="LabThing.EmployeeId" class="form-control" asp-items="@Model.Employee"></select>
-            </div>*@
-            @*********************************************************************************@
-
-            @*<div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}*@
