fixed seed database which stopped working at some point and I can't remember when...but it works now. still unable to edit chemicals.

--- a/LabManager/Views/Chemicals/Index.cshtml
+++ b/LabManager/Views/Chemicals/Index.cshtml
@@ -37,10 +37,10 @@
                 @Html.DisplayNameFor(model => model.Employee)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ManufacturerID)
+                @Html.DisplayNameFor(model => model.Manufacturer)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ChemicalTypeID)
+                @Html.DisplayNameFor(model => model.ChemicalType)
             </th>
             <th></th>
         </tr>
