--- a/LabManager/Views/Chemicals/Details.cshtml
+++ b/LabManager/Views/Chemicals/Details.cshtml
@@ -53,22 +53,22 @@
             @Html.DisplayFor(model => model.Note)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EmployeeId)
+            @Html.DisplayNameFor(model => model.Employee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EmployeeId)
+            @Html.DisplayFor(model => model.Employee.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ManufacturerID)
+            @Html.DisplayNameFor(model => model.Manufacturer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ManufacturerID)
+            @Html.DisplayFor(model => model.Manufacturer.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ChemicalTypeID)
+            @Html.DisplayNameFor(model => model.ChemicalType)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ChemicalTypeID)
+            @Html.DisplayFor(model => model.ChemicalType.Name)
         </dd>
     </dl>
 </div>
