--- a/LabManager/Views/LabThings/Edit.cshtml
+++ b/LabManager/Views/LabThings/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿@*@model LabManager.Models.ViewModels.LabThingEditViewModel*@
-@model LabManager.Models.LabThing
-@*@model IEnumerable<LabManager.Models.LabThing>*@
+﻿@model LabManager.Models.LabThing
 
 
 @{
@@ -20,7 +18,7 @@
 
                 <div class="form-group">
                     <label asp-for="ID" class="control-label"></label>
-                    <div>@Html.DisplayFor(model=> model.ID)</div>
+                    <div>@Html.DisplayFor(model=> model.Name)</div>
                 </div>
                 <div class="form-group">
                     <label asp-for="SerialNo" class="control-label"></label>
